@@ -1,3 +1,8 @@
+2005-11-14  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-utils.c (g_mime_references_next): Added for the C#
+	bindings.
+
 2005-10-12  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Updated version
